# Ticket-System-2025-HW

./: CMakeLists.txt
documents/: design.md
src/: common.h  main.cpp  order.cpp  order.h  parser.h  train.cpp  train.h  user.cpp  user.h
src/database/: CMakeLists.txt  database.h
src/database/my-bpt/: BPT.h  Node.h  common.h
src/database/my-bpt/disk/: IO_manager.cpp  IO_manager.h  IO_utils.cpp  IO_utils.h  rubbish_bin.h  serialize.h
src/stlite/: exceptions.hpp  filed_config.hpp  filed_list.hpp  looped_queue.hpp  map.hpp  my_fileconfig.h  norb_utils.hpp  sized_queue.h  sparse_array.h  utils.h  vector.hpp
src/utils/: CMakeLists.txt  datetime.cpp  datetime.h  parser.h  string_utils.h  time.cpp  time.h  train_data.h
test_env/: code_test  persistent_std.config
